fixing issue where line height multiplier was not working correctly when inheriting from parent - e.g. multi row h1 text was overlapping

--- a/component/src/views/chat/messages/messagesBase.css
+++ b/component/src/views/chat/messages/messagesBase.css
@@ -32,7 +32,7 @@
   border-radius: 10px;
   padding: 0.42em 0.55em;
   height: fit-content;
-  line-height: 1.26em;
+  line-height: 1.26;
 }
 
 .user-message-text {
